# calamr_pyg

./: .gitignore  README.md  pyproject.toml
scripts/: clean_pycache.sh  run_experiments.py  train_appnp.py  train_deeper_gcn.py  train_edge_gat.py  train_gated.py  train_gatv2.py  train_gcn2.py  train_gin.py  train_gps.py  train_graph_saint.py  train_graph_transformer.py  train_hybrid.py  train_pna.py  train_sage.py
src/calamr_pyg/: __init__.py
src/calamr_pyg/data/: __init__.py
src/calamr_pyg/data/datasets/: __init__.py  generic.py  utils.py
src/calamr_pyg/models/: __init__.py  appnp.py  deeper_gcn.py  edge_aware_gat.py  gated_gnn.py  gatv2.py  gcn2.py  gin.py  gps.py  graph_sage.py  graph_saint.py  graph_transformer.py  hybrid_gcn.py  pna.py
src/calamr_pyg/training/: __init__.py  metrics.py  trainer.py
src/calamr_pyg/utils/: __init__.py
tests/: __init__.py  test_data.py  test_models.py
