[project]
name = "calamr-pyg"
version = "0.1.0"
description = "Medical hallucination detection using Graph Neural Networks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calamr_pyg"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
